Added the appropriate tracks to the website

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
                 <div id="project1">
                     <h2>Final Track</h2>
-                    <audio controls src="audio/final_track.mp3"></audio>
+                    <audio controls src="assets/audio/final_track_project.mp3"></audio>
 
                     <p>
                         As I reflect on this piece, I get the feeling of brisk,
@@ -320,8 +320,8 @@
                     <h2>Sound Design Reel</h2>
                     <video
                         controls
-                        poster="poster_image.png"
-                        src="video/sound_design.mp4"
+                        poster="assets/img/demo_mode_poster.jpg"
+                        src="assets/vid/demo_mode_360p.mp4"
                     ></video>
                     <p>
                         As a sound design student, I am passionate about
@@ -337,7 +337,7 @@
 
                 <div id="project3">
                     <h2>Will It Stop</h2>
-                    <audio controls src="audio/will_it_stop.mp3"></audio>
+                    <audio controls src="assets/audio/will_it_stop.mp3"></audio>
                     <p>
                         In mixing and mastering "Will It Stop," I carefully
                         blended a combination of loops, MIDI instruments,
@@ -358,7 +358,7 @@
 
                 <div id="project4">
                     <h2>Theme & Variations</h2>
-                    <audio controls src="audio/cinderella_original.mp3"></audio>
+                    <audio controls src="assets/audio/original_verse_and_chorus.mp3"></audio>
                     <p>
                         For this remix project, I chose Cinderella by Mikaela
                         Davis and Southern Star from the Cambridge library,
@@ -370,7 +370,7 @@
                         give the track a fresh dynamic.
                     </p>
 
-                    <audio controls src="audio/cinderella_var1.mp3"></audio>
+                    <audio controls src="assets/audio/variation_1.mp3"></audio>
                     <p>
                         In this variation, I replaced the drums with a more
                         rock-oriented, electric sound. I also changed the groove
@@ -378,7 +378,7 @@
                         drive to that section.
                     </p>
 
-                    <audio controls src="audio/cinderella_var2.mp3"></audio>
+                    <audio controls src="assets/audio/variation_2.mp3"></audio>
                     <p>
                         In this variation, I recorded and incorporated a live
                         shaker to enhance the double-time groove sections. The
@@ -389,7 +389,7 @@
                         while maintaining a lively, human touch.
                     </p>
 
-                    <audio controls src="audio/cinderella_var3.mp3"></audio>
+                    <audio controls src="assets/audio/variation_3.mp3"></audio>
                     <p>
                         Building on the previous two variations, I created
                         ambient wind sounds to add a final touch of natural
