Set the "favicon"

--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Nomadic Sound</title>
         <link rel="stylesheet" href="css/styles.css" />
+        <link rel="icon" href="assets/img/nomadic_sound_logo.png" />
         <script src="js/scripts.js" defer></script>
         <script>
             // This script ensures only one media element plays at a time
-            document.addEventListener('DOMContentLoaded', function() {
+            document.addEventListener("DOMContentLoaded", function () {
                 // Get all audio and video elements
-                const mediaElements = document.querySelectorAll('audio, video');
-                
+                const mediaElements = document.querySelectorAll("audio, video");
+
                 // Add play event listener to each media element
-                mediaElements.forEach(media => {
-                    media.addEventListener('play', function() {
+                mediaElements.forEach((media) => {
+                    media.addEventListener("play", function () {
                         // Pause all other media elements
-                        mediaElements.forEach(otherMedia => {
+                        mediaElements.forEach((otherMedia) => {
                             if (otherMedia !== media && !otherMedia.paused) {
                                 otherMedia.pause();
                             }
