--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         href="#project1"
                         class="portfolio-link"
                         data-target="project1"
-                        >Final Track</a
+                        >Synth Rush</a
                     >
                     <a
                         href="#project2"
@@ -266,7 +266,7 @@
                 </div>
 
                 <div id="project1" class="portfolio-item">
-                    <h2>Final Track</h2>
+                    <h2>Synth Rush</h2>
                     <div class="project-meta">
                         Original Composition • 120 BPM • A Minor/Major
                     </div>
