Made updates to text and tag positioning.

--- a/index.html
+++ b/index.html
@@ -243,25 +243,25 @@
                         href="#project1"
                         class="portfolio-link"
                         data-target="project1"
-                        >Synth Rush</a
+                        >Project 1</a
                     >
                     <a
                         href="#project2"
                         class="portfolio-link"
                         data-target="project2"
-                        >Sound Design</a
+                        >Project 2</a
                     >
                     <a
                         href="#project3"
                         class="portfolio-link"
                         data-target="project3"
-                        >Will It Stop</a
+                        >Project 3</a
                     >
                     <a
                         href="#project4"
                         class="portfolio-link"
                         data-target="project4"
-                        >Theme & Variations</a
+                        >Project 4</a
                     >
                 </div>
 
@@ -371,7 +371,7 @@
                 <div id="project3" class="portfolio-item">
                     <h2>Will It Stop</h2>
                     <div class="project-meta">
-                        Industrial Dance • Mixed Media • Vocal Processing
+                        Original Composition • Mixed Media • Vocal Processing
                     </div>
                     <audio
                         controls
@@ -397,7 +397,7 @@
                 </div>
 
                 <div id="project4" class="portfolio-item">
-                    <h2>Theme & Variations</h2>
+                    <h2>Cinderella Remix</h2>
                     <div class="project-meta">
                         Remix Project • Folk/Rock • Multiple Variations
                     </div>
