Updated home page with mission statement and services

--- a/index.html
+++ b/index.html
@@ -121,15 +121,39 @@
                         Welcome to Nomadic Sound
                     </h1>
                     <div class="hero-description">
-                        <p class="hero-tagline">Where Sound Meets Innovation</p>
+                        <p class="hero-tagline">Nomadic Sound, LLC</p>
                         <p class="hero-text">
-                            Explore cutting-edge audio production, immersive
-                            sound design, and original compositions crafted with
-                            passion and precision.
+                            Founded in 2025, Nomadic Soundwas established by
+                            Nicole Streets as a mobile audio production company
+                            built on a passion for sound design and
+                            storytelling.
                         </p>
+                        <p class="hero-tagline">Mission Statement</p>
                         <p class="hero-text">
-                            Discover how professional audio can transform your
-                            creative vision into reality.
+                            Nomadic Sound exists to craft bold, immersive audio
+                            experiences from anywhere in the world. We break
+                            boundaries by capturing raw, authentic sounds and
+                            shaping them into compelling stories. Through sound
+                            design, field recording, and precision mixing, we
+                            deliver high-impact audio that moves with purpose,
+                            wherever the noise is needed.
+                        </p>
+                        <p class="hero-tagline">Services</p>
+                        <p class="hero-text">
+                            Nomadic Sound offers custom audio services for
+                            creators, developers, and media producers. Our work
+                            includes sound design for film, games, and podcasts;
+                            field recording and Foley; dialogue editing; and
+                            professional mixing and mastering. We also provide
+                            music composition, Wwise and FMOD integration, audio
+                            cleanup, ADR, and sound-to-picture syncing.
+                            Additional services include sonic branding and
+                            commercial audio for ads, trailers, and podcasts.
+                            All work is crafted remotely with a
+                            location-independent setup and offered through
+                            flexible pricing that could be project-based,
+                            hourly, retainer, or bundled packages to suit a
+                            variety of needs.
                         </p>
                         <div class="hero-actions">
                             <a
