--- a/index.html
+++ b/index.html
@@ -178,52 +178,30 @@
                     <div class="about-grid">
                         <div class="about-text">
                             <div class="about-highlight">
-                                <h3>Current Focus</h3>
+                                <h3>Nomadic Sound Founder</h3>
                                 <p>
-                                    Currently pursuing a Bachelor's degree in
-                                    Audio Production, Nicole combines academic
-                                    excellence with real-world experience to
-                                    create exceptional audio experiences.
+                                    Nomadic Sound was founded by Nicole Streets: sound designer, storyteller, and firm believer that great audio doesn't just support a project...it transforms it. With a Bachelor of Science in Audio Production and diverse creative and technical experience, Nicole launched Nomadic Sound to bring immersive, emotionally driven sound to independent creators, wherever their projects take them.
                                 </p>
                             </div>
 
                             <div class="about-section">
                                 <h3>Professional Journey</h3>
                                 <p>
-                                    Nicole brings a unique multidisciplinary
-                                    approach to audio production, drawing from
-                                    her diverse background spanning technology,
-                                    leadership, and creative arts. Her
-                                    experience as a Software Developer provides
-                                    technical precision, while her role as Board
-                                    President of a roller derby league honed her
-                                    project management and leadership skills.
+                                    Nicole's path to sound design started with a love for music and a curiosity about how sound shapes emotion, memory, and space. After earning a Bachelor of Science in Audio Production and working across various creative and technical roles, she brings a unique multidisciplinary approach that spans technology, leadership, and creative arts to every project.
                                 </p>
                             </div>
 
                             <div class="about-section">
-                                <h3>Technical Expertise</h3>
+                                <h3>Mobile Audio Specialization</h3>
                                 <p>
-                                    With a foundation in software development
-                                    and system administration, Nicole approaches
-                                    audio production with both creative vision
-                                    and technical mastery. Her background as a
-                                    Repair Technician instilled meticulous
-                                    attention to detail and problem-solving
-                                    skills that translate perfectly to audio
-                                    engineering.
+                                    Nomadic Sound specializes in mobile audio production for games, film, and digital media. From custom sound design and original scoring to ambient recordings and sonic branding, Nicole delivers high-quality audio tailored to the unique vibe and vision of every client. Her process is hands-on, collaborative, and always guided by a deep respect for the emotional power of sound.
                                 </p>
                             </div>
 
                             <div class="about-section">
-                                <h3>Beyond the Studio</h3>
+                                <h3>What Sets Nomadic Sound Apart</h3>
                                 <p>
-                                    When not crafting audio experiences, Nicole
-                                    channels her energy into live music, outdoor
-                                    adventures, and community involvement. Her
-                                    passion for music extends beyond production
-                                    into experiencing diverse sounds and
-                                    supporting local artists.
+                                    What sets Nomadic Sound apart is its flexibility and heart. As a traveling sound designer, Nicole brings the studio to you by capturing real-world texture, designing audio that tells a story, and offering a creative partnership that's as adaptive as it is passionate. When not crafting audio experiences, Nicole channels her energy into live music, outdoor adventures, and community involvement.
                                 </p>
                             </div>
                         </div>
@@ -231,22 +209,19 @@
                         <div class="skills-showcase">
                             <h3>Core Competencies</h3>
                             <div class="skill-tags">
-                                <span class="skill-tag">Audio Production</span>
+                                <span class="skill-tag">Mobile Audio Production</span>
                                 <span class="skill-tag">Sound Design</span>
-                                <span class="skill-tag">Music Composition</span>
-                                <span class="skill-tag">Foley Recording</span>
-                                <span class="skill-tag"
-                                    >Mixing & Mastering</span
-                                >
-                                <span class="skill-tag"
-                                    >Project Management</span
-                                >
-                                <span class="skill-tag"
-                                    >Technical Innovation</span
-                                >
-                                <span class="skill-tag"
-                                    >Creative Direction</span
-                                >
+                                <span class="skill-tag">Original Scoring</span>
+                                <span class="skill-tag">Ambient Recording</span>
+                                <span class="skill-tag">Field Recording</span>
+                                <span class="skill-tag">Foley</span>
+                                <span class="skill-tag">Sonic Branding</span>
+                                <span class="skill-tag">Game Audio</span>
+                                <span class="skill-tag">Film Audio</span>
+                                <span class="skill-tag">Digital Media</span>
+                                <span class="skill-tag">Storytelling</span>
+                                <span class="skill-tag">Project Management</span>
+                                <span class="skill-tag">Software Engineering</span>
                             </div>
                         </div>
                     </div>
