--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
                         <div class="about-text">
                             <div class="about-highlight">
                                 <h3>Nomadic Sound Founder</h3>
+                                <div class="founder-photo-centered">
+                                    <img src="assets/img/nicole.png" alt="Nicole Streets, Founder of Nomadic Sound" />
+                                </div>
                                 <p>
                                     Nomadic Sound was founded by Nicole Streets: sound designer, storyteller, and firm believer that great audio doesn't just support a project...it transforms it. With a Bachelor of Science in Audio Production and diverse creative and technical experience, Nicole launched Nomadic Sound to bring immersive, emotionally driven sound to independent creators, wherever their projects take them.
                                 </p>
