Updated About Nicole

--- a/index.html
+++ b/index.html
@@ -180,31 +180,47 @@
                             <div class="about-highlight">
                                 <h3>Nomadic Sound Founder</h3>
                                 <div class="founder-photo-centered">
-                                    <img src="assets/img/nicole.png" alt="Nicole Streets, Founder of Nomadic Sound" />
+                                    <img
+                                        src="assets/img/nicole.png"
+                                        alt="Nicole Streets, Founder of Nomadic Sound"
+                                    />
                                 </div>
                                 <p>
-                                    Nomadic Sound was founded by Nicole Streets: sound designer, storyteller, and firm believer that great audio doesn't just support a project...it transforms it. With a Bachelor of Science in Audio Production and diverse creative and technical experience, Nicole launched Nomadic Sound to bring immersive, emotionally driven sound to independent creators, wherever their projects take them.
+                                    Nomadic Sound was founded by Nicole Streets:
+                                    sound designer, storyteller, and firm
+                                    believer that great audio doesn’t just
+                                    support a project...it transforms it.
+                                    Nicole’s path to sound design started with a
+                                    love for music and a curiosity about how
+                                    sound shapes emotion, memory, and space. She
+                                    brings a unique multidisciplinary approach
+                                    that spans technology, leadership, and
+                                    creative arts to every project. After
+                                    earning a Bachelor of Science in Audio
+                                    Production, she launched Nomadic Sound to
+                                    bring immersive, emotionally driven sound to
+                                    independent creators, wherever their
+                                    projects take them.
                                 </p>
-                            </div>
-
-                            <div class="about-section">
-                                <h3>Professional Journey</h3>
                                 <p>
-                                    Nicole's path to sound design started with a love for music and a curiosity about how sound shapes emotion, memory, and space. After earning a Bachelor of Science in Audio Production and working across various creative and technical roles, she brings a unique multidisciplinary approach that spans technology, leadership, and creative arts to every project.
+                                    Nomadic Sound specializes in mobile audio
+                                    production for games, film, and digital
+                                    media. From custom sound design and original
+                                    scoring to ambient recordings and sonic
+                                    branding, Nicole delivers high-quality audio
+                                    tailored to the unique vibe and vision of
+                                    every client. Her process is hands-on,
+                                    collaborative, and always guided by a deep
+                                    respect for the emotional power of sound.
                                 </p>
-                            </div>
-
-                            <div class="about-section">
-                                <h3>Mobile Audio Specialization</h3>
                                 <p>
-                                    Nomadic Sound specializes in mobile audio production for games, film, and digital media. From custom sound design and original scoring to ambient recordings and sonic branding, Nicole delivers high-quality audio tailored to the unique vibe and vision of every client. Her process is hands-on, collaborative, and always guided by a deep respect for the emotional power of sound.
-                                </p>
-                            </div>
-
-                            <div class="about-section">
-                                <h3>What Sets Nomadic Sound Apart</h3>
-                                <p>
-                                    What sets Nomadic Sound apart is its flexibility and heart. As a traveling sound designer, Nicole brings the studio to you by capturing real-world texture, designing audio that tells a story, and offering a creative partnership that's as adaptive as it is passionate. When not crafting audio experiences, Nicole channels her energy into live music, outdoor adventures, and community involvement.
+                                    What sets Nomadic Sound apart is its
+                                    flexibility and heart. As a traveling sound
+                                    designer, Nicole brings the studio to you by
+                                    capturing real-world texture, designing
+                                    audio that tells a story, and offering a
+                                    creative partnership that’s as adaptive as
+                                    it is passionate.
                                 </p>
                             </div>
                         </div>
@@ -212,7 +228,9 @@
                         <div class="skills-showcase">
                             <h3>Core Competencies</h3>
                             <div class="skill-tags">
-                                <span class="skill-tag">Mobile Audio Production</span>
+                                <span class="skill-tag"
+                                    >Mobile Audio Production</span
+                                >
                                 <span class="skill-tag">Sound Design</span>
                                 <span class="skill-tag">Original Scoring</span>
                                 <span class="skill-tag">Ambient Recording</span>
@@ -223,8 +241,12 @@
                                 <span class="skill-tag">Film Audio</span>
                                 <span class="skill-tag">Digital Media</span>
                                 <span class="skill-tag">Storytelling</span>
-                                <span class="skill-tag">Project Management</span>
-                                <span class="skill-tag">Software Engineering</span>
+                                <span class="skill-tag"
+                                    >Project Management</span
+                                >
+                                <span class="skill-tag"
+                                    >Software Engineering</span
+                                >
                             </div>
                         </div>
                     </div>
