--- a/index.html
+++ b/index.html
@@ -287,6 +287,12 @@
                         data-target="project4"
                         >Project 4</a
                     >
+                    <a
+                        href="#project5"
+                        class="portfolio-link"
+                        data-target="project5"
+                        >Project 5</a
+                    >
                 </div>
 
                 <div id="project1" class="portfolio-item">
@@ -480,6 +486,26 @@
                         but also serves as a subtle cue for the transition into
                         the double-time groove, reinforcing the rhythmic shift
                         and making the change feel more organic and intentional.
+                    </p>
+                </div>
+
+                <div id="project5" class="portfolio-item">
+                    <h2>Skateboarding Video Sound Design</h2>
+                    <div class="project-meta">
+                        Complete Audio Experience • Original Soundtrack • Sonic Logo
+                    </div>
+                    <video
+                        controls
+                        src="assets/vid/sound_design.mp4"
+                    ></video>
+                    <p>
+                        For this project, I crafted the complete audio experience for a skateboarding video—from custom sound design and an original soundtrack to a signature sonic logo that opens the video with a clear sense of brand identity. The goal was to energize the visuals, enhance storytelling through sound, and create a cohesive, immersive audio environment.
+                    </p>
+                    <p>
+                        To reinforce the Nomadic Sound brand right from the start, I developed a short sonic logo that captures the essence of what we offer: clean, modern, and creatively mobile. I layered tonal swells to suggest movement, using spatial effects and EQ to give the logo clarity and presence. The result is a polished, recognizable sound mark that sets the tone for the video and can be reused across future branded content.
+                    </p>
+                    <p>
+                        This project is a strong example of Nomadic Sound, a high-quality, end-to-end audio production that adapts to various environments, platforms, and creative needs, all while maintaining a consistent sonic vision.
                     </p>
                 </div>
             </section>
