Updated project 1 to use CloudFlare storage.

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                     </div>
                     <audio
                         controls
-                        src="assets/audio/final_track_project.mp3"
+                        src="https://nomadic.halverneus.workers.dev/final_track_project.mp3"
                         class="audio-player"
                     ></audio>
 
@@ -492,20 +492,34 @@
                 <div id="project5" class="portfolio-item">
                     <h2>Skateboarding Video Sound Design</h2>
                     <div class="project-meta">
-                        Complete Audio Experience • Original Soundtrack • Sonic Logo
+                        Complete Audio Experience • Original Soundtrack • Sonic
+                        Logo
                     </div>
-                    <video
-                        controls
-                        src="assets/vid/sound_design.mp4"
-                    ></video>
+                    <video controls src="assets/vid/sound_design.mp4"></video>
                     <p>
-                        For this project, I crafted the complete audio experience for a skateboarding video—from custom sound design and an original soundtrack to a signature sonic logo that opens the video with a clear sense of brand identity. The goal was to energize the visuals, enhance storytelling through sound, and create a cohesive, immersive audio environment.
+                        For this project, I crafted the complete audio
+                        experience for a skateboarding video—from custom sound
+                        design and an original soundtrack to a signature sonic
+                        logo that opens the video with a clear sense of brand
+                        identity. The goal was to energize the visuals, enhance
+                        storytelling through sound, and create a cohesive,
+                        immersive audio environment.
                     </p>
                     <p>
-                        To reinforce the Nomadic Sound brand right from the start, I developed a short sonic logo that captures the essence of what we offer: clean, modern, and creatively mobile. I layered tonal swells to suggest movement, using spatial effects and EQ to give the logo clarity and presence. The result is a polished, recognizable sound mark that sets the tone for the video and can be reused across future branded content.
+                        To reinforce the Nomadic Sound brand right from the
+                        start, I developed a short sonic logo that captures the
+                        essence of what we offer: clean, modern, and creatively
+                        mobile. I layered tonal swells to suggest movement,
+                        using spatial effects and EQ to give the logo clarity
+                        and presence. The result is a polished, recognizable
+                        sound mark that sets the tone for the video and can be
+                        reused across future branded content.
                     </p>
                     <p>
-                        This project is a strong example of Nomadic Sound, a high-quality, end-to-end audio production that adapts to various environments, platforms, and creative needs, all while maintaining a consistent sonic vision.
+                        This project is a strong example of Nomadic Sound, a
+                        high-quality, end-to-end audio production that adapts to
+                        various environments, platforms, and creative needs, all
+                        while maintaining a consistent sonic vision.
                     </p>
                 </div>
             </section>
