Added crossorigin to Project 1.

--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
                     </div>
                     <audio
                         controls
+                        crossorigin="anonymous"
                         src="https://nomadic.halverneus.workers.dev/final_track_project.mp3"
                         class="audio-player"
                     ></audio>
