Updated media to be served from CloudFlare.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         />
         <meta
             property="og:image"
-            content="https://halverneus.github.io/assets/img/nomadic_sound_logo.png"
+            content="https://nomadic.halverneus.workers.dev/nomadic_sound_logo.png"
         />
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="1024" />
@@ -55,19 +55,19 @@
         />
         <meta
             name="twitter:image"
-            content="https://halverneus.github.io/assets/img/nomadic_sound_logo.png"
+            content="https://nomadic.halverneus.workers.dev/nomadic_sound_logo.png"
         />
 
         <!-- Canonical URL -->
         <link rel="canonical" href="https://halverneus.github.io/" />
 
         <link rel="stylesheet" href="css/styles.css" />
-        <link rel="icon" href="assets/img/nomadic_sound_logo.png" />
+        <link rel="icon" href="https://nomadic.halverneus.workers.dev/nomadic_sound_logo.png" />
 
         <!-- Preload critical resources -->
         <link
             rel="preload"
-            href="assets/img/nomadic_sound_logo.png"
+            href="https://nomadic.halverneus.workers.dev/nomadic_sound_logo.png"
             as="image"
         />
         <link rel="preload" href="css/styles.css" as="style" />
@@ -96,8 +96,9 @@
     <body>
         <header id="main-header">
             <img
-                src="assets/img/nomadic_sound_logo.png"
+                src="https://nomadic.halverneus.workers.dev/nomadic_sound_logo.png"
                 alt="Nomadic Sound Logo"
+                crossorigin="anonymous"
             />
             <nav>
                 <a href="#home" data-section="home" class="active">Home</a>
@@ -181,8 +182,9 @@
                                 <h3>Nomadic Sound Founder</h3>
                                 <div class="founder-photo-centered">
                                     <img
-                                        src="assets/img/nicole.png"
+                                        src="https://nomadic.halverneus.workers.dev/nicole.png"
                                         alt="Nicole Streets, Founder of Nomadic Sound"
+                                        crossorigin="anonymous"
                                     />
                                 </div>
                                 <p>
@@ -384,8 +386,9 @@
                     </div>
                     <video
                         controls
-                        poster="assets/img/demo_mode_poster.jpg"
-                        src="assets/vid/demo_mode_360p.mp4"
+                        poster="https://nomadic.halverneus.workers.dev/demo_mode_poster.jpg"
+                        src="https://nomadic.halverneus.workers.dev/demo_mode_360p.mp4"
+                        crossorigin="anonymous"
                     ></video>
                     <p>
                         As a sound design student, I am passionate about
@@ -406,8 +409,9 @@
                     </div>
                     <audio
                         controls
-                        src="assets/audio/will_it_stop.mp3"
+                        src="https://nomadic.halverneus.workers.dev/will_it_stop.mp3"
                         class="audio-player"
+                        crossorigin="anonymous"
                     ></audio>
                     <p>
                         In mixing and mastering "Will It Stop," I carefully
@@ -434,8 +438,9 @@
                     </div>
                     <audio
                         controls
-                        src="assets/audio/original_verse_and_chorus.mp3"
+                        src="https://nomadic.halverneus.workers.dev/original_verse_and_chorus.mp3"
                         class="audio-player"
+                        crossorigin="anonymous"
                     ></audio>
                     <p>
                         For this remix project, I chose Cinderella by Mikaela
@@ -450,8 +455,9 @@
 
                     <audio
                         controls
-                        src="assets/audio/variation_1.mp3"
+                        src="https://nomadic.halverneus.workers.dev/variation_1.mp3"
                         class="audio-player"
+                        crossorigin="anonymous"
                     ></audio>
                     <p>
                         In this variation, I replaced the drums with a more
@@ -462,8 +468,9 @@
 
                     <audio
                         controls
-                        src="assets/audio/variation_2.mp3"
+                        src="https://nomadic.halverneus.workers.dev/variation_2.mp3"
                         class="audio-player"
+                        crossorigin="anonymous"
                     ></audio>
                     <p>
                         In this variation, I recorded and incorporated a live
@@ -477,8 +484,9 @@
 
                     <audio
                         controls
-                        src="assets/audio/variation_3.mp3"
+                        src="https://nomadic.halverneus.workers.dev/variation_3.mp3"
                         class="audio-player"
+                        crossorigin="anonymous"
                     ></audio>
                     <p>
                         Building on the previous two variations, I created
@@ -496,7 +504,11 @@
                         Complete Audio Experience • Original Soundtrack • Sonic
                         Logo
                     </div>
-                    <video controls src="assets/vid/sound_design.mp4"></video>
+                    <video
+                        controls
+                        src="https://nomadic.halverneus.workers.dev/sound_design.mp4"
+                        crossorigin="anonymous"
+                    ></video>
                     <p>
                         For this project, I crafted the complete audio
                         experience for a skateboarding video—from custom sound
