Fixed video posters
- Blacksmith poster was png, not jpg. - Skateboard didn't have a poster.

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     </div>
                     <video
                         controls
-                        poster="https://nomadic.halverneus.workers.dev/blacksmith_poster.jpg"
+                        poster="https://nomadic.halverneus.workers.dev/blacksmith_poster.png"
                         src="https://nomadic.halverneus.workers.dev/blacksmith_final.mp4"
                         crossorigin="anonymous"
                     ></video>
@@ -348,6 +348,7 @@
                     </div>
                     <video
                         controls
+                        poster="https://nomadic.halverneus.workers.dev/skateboard_poster.png"
                         src="https://nomadic.halverneus.workers.dev/sound_design.mp4"
                         crossorigin="anonymous"
                     ></video>
