--- a/index.html
+++ b/index.html
@@ -124,10 +124,11 @@
                     <h1 data-text="Welcome to Nomadic Sound">
                         Welcome to Nomadic Sound
                     </h1>
+                    <p class="tagline">Producer | Sound Designer | Artist</p>
                     <div class="hero-description">
                         <p class="hero-tagline">Nomadic Sound, LLC</p>
                         <p class="hero-text">
-                            Founded in 2025, Nomadic Soundwas established by
+                            Founded in 2025, Nomadic Sound was established by
                             Nicole Streets as a mobile audio production company
                             built on a passion for sound design and
                             storytelling.
