Added Education and Certification.

--- a/index.html
+++ b/index.html
@@ -255,6 +255,32 @@
                                 >
                             </div>
                         </div>
+
+                        <div class="skills-showcase">
+                            <h3>Education and Certification</h3>
+                            <div class="education-content">
+                                <div class="education-item">
+                                    <div class="education-date">
+                                        January 2023 - December 2025
+                                    </div>
+                                    <div class="education-school">
+                                        Full Sail University
+                                    </div>
+                                    <div class="education-degree">
+                                        B.S. in Audio Production
+                                    </div>
+                                    <div class="education-location">
+                                        Clearwater, FL
+                                    </div>
+                                </div>
+                                <div class="education-item">
+                                    <div class="education-organization">
+                                        National Society of Collegiate Scholars
+                                    </div>
+                                    <div class="education-role">Member</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
