--- a/index.html
+++ b/index.html
@@ -608,5 +608,28 @@
                 </div>
             </section>
         </main>
+
+        <footer class="site-footer">
+            <div class="footer-content">
+                <div class="contact-info">
+                    <a
+                        href="mailto:nicole.streets@gmail.com"
+                        class="contact-email"
+                    >
+                        <span class="email-icon">✉</span>
+                        nicole.streets@gmail.com
+                    </a>
+                    <a
+                        href="https://www.linkedin.com/in/nicole-streets-05549915/"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        class="linkedin-link"
+                    >
+                        <span class="linkedin-icon">💼</span>
+                        LinkedIn
+                    </a>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
