--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
             rel="stylesheet"
         />
 
+        <!-- Font Awesome Icons -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+            crossorigin="anonymous"
+        />
+
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://halverneus.github.io/" />
@@ -616,7 +623,7 @@
                         href="mailto:nicole.streets@gmail.com"
                         class="contact-email"
                     >
-                        <span class="email-icon">✉</span>
+                        <i class="fas fa-envelope email-icon"></i>
                         nicole.streets@gmail.com
                     </a>
                     <a
@@ -625,7 +632,7 @@
                         rel="noopener noreferrer"
                         class="linkedin-link"
                     >
-                        <span class="linkedin-icon">💼</span>
+                        <i class="fab fa-linkedin linkedin-icon"></i>
                         LinkedIn
                     </a>
                 </div>
