Added Foster Life project.

--- a/index.html
+++ b/index.html
@@ -303,6 +303,12 @@
                 </div>
                 <div class="portfolio-nav">
                     <a
+                        href="#project7"
+                        class="portfolio-link"
+                        data-target="project7"
+                        >Fostering Life: Lucius</a
+                    >
+                    <a
                         href="#project6"
                         class="portfolio-link"
                         data-target="project6"
@@ -338,6 +344,51 @@
                         data-target="project1"
                         >Synth Rush</a
                     >
+                </div>
+
+                <div id="project7" class="portfolio-item">
+                    <h2>Fostering Life: Lucius - Audiobook Back Cover</h2>
+                    <div class="project-meta">
+                        Audio Production • Ambient Sound Design • Narration
+                        Mixing
+                    </div>
+                    <img
+                        src="assets/img/foster_life_poster.png"
+                        alt="Fostering Life: Lucius Book Cover"
+                        style="
+                            width: 100%;
+                            max-width: 800px;
+                            height: auto;
+                            display: block;
+                            margin: 0 auto 2rem;
+                        "
+                    />
+                    <audio
+                        controls
+                        src="assets/audio/foster_life.mp3"
+                        class="audio-player"
+                    ></audio>
+                    <p>
+                        For this audiobook project, I crafted an immersive back
+                        cover audio experience that brings the story of
+                        Fostering Life: Lucius to life through strategic sound
+                        design and careful audio mixing. The piece combines the
+                        narrator's compelling voice with ambient soundscapes and
+                        subtle musical elements to create an atmospheric
+                        introduction that captures the emotional depth and tone
+                        of the book.
+                    </p>
+                    <p>
+                        My work on this project involved blending the recorded
+                        narration with custom ambient textures and background
+                        music, ensuring each element complemented the
+                        storytelling without overwhelming the narrator's
+                        delivery. Through precise EQ, compression, and spatial
+                        effects, I created a cohesive sonic environment that
+                        draws listeners into the world of the story while
+                        maintaining clarity and professional polish throughout
+                        the audio presentation.
+                    </p>
                 </div>
 
                 <div id="project6" class="portfolio-item">
